# game-engine

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/assets/models/cottage/: cottage.mtl
app/src/: main.cpp
engine/: CMakeLists.txt
engine/src/: AppLayer.cpp  AppLayer.hpp  EditToolsLayer.cpp  EditToolsLayer.hpp  main.cpp
engine/src/AI/BehaviourTree/: Blackboard.hpp  Task.hpp  TaskDecorator.hpp
engine/src/AI/Pathfinding/: Boundaries.hpp  Direction.cpp  Direction.hpp  Heuristic.cpp  Heuristic.hpp  LevelPath.hpp  Map.cpp  Map.hpp  MapObject.hpp  PathFinderResultHandler.hpp  PathSmoother.hpp  PathfinderConcrete.hpp  Point.hpp
engine/src/Animation/: Animation.hpp  AnimationLoader.cpp  AnimationLoader.hpp  AnimationScene.hpp  TimeLine.hpp
engine/src/Collision/: AABBOverlap.cpp  AABBOverlap.hpp  BroadPhaseAlgorithm.cpp  BroadPhaseAlgorithm.hpp  Collision3D.hpp  CollisionDetection.cpp  CollisionDetection.hpp  Grid.hpp  NarrowPhaseAlgorithm.cpp  NarrowPhaseAlgorithm.hpp
engine/src/Collision/Shapes/: AABB.hpp  CollisionShape.hpp
engine/src/Core/: BalancedBinaryHeap.hpp  CustomTraits.hpp  Debug.hpp  Easing.hpp  EventDispatcher.hpp  EventHandler.hpp  File.cpp  File.hpp  FlatDictionary.hpp  IteratorRange.hpp  Math.cpp  Math.hpp  ObjectPool.hpp  Quad.hpp  SpatialMap.hpp  StringBuilder.hpp  Time.cpp  Time.hpp
engine/src/ECS/: ComponentArray-array-version.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  Coordinator.сpp  Entity.hpp  EntityManager-array-version.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.hpp
engine/src/Engine/: Application.cpp  Application.hpp  Configs.hpp  Engine.hpp  EntryPoint.hpp  FontManager.cpp  FontManager.hpp  Layer.cpp  Layer.hpp  MousePicker.cpp  MousePicker.hpp  TextureManager.cpp  TextureManager.hpp
engine/src/Engine/AI/: ControllerTask.hpp  JumpTask.hpp  MoveLeftTask.hpp  MoveRightTask.hpp  MoveTask.hpp  NoopTask.hpp  OnGroundTask.hpp  RotateTask.hpp
engine/src/Engine/EditTools/: EditToolsEvent.hpp  EditToolsLayer.cpp  EditToolsLayer.hpp  ImGuiWidgets.hpp  ImguiImpl.cpp  ImguiImpl.hpp
engine/src/Engine/Resources/: Materials.cpp  Materials.hpp  Shaders.cpp  Shaders.hpp  Textures.cpp  Textures.hpp
engine/src/Engine/Scripting/: Script.hpp  ScriptContext.hpp  ScriptManager.hpp
engine/src/IO/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
engine/src/IO/SDL/: SDLInput.cpp  SDLInput.hpp  SDLWindow.cpp  SDLWindow.hpp
engine/src/Render3D/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  CubeMap.cpp  CubeMap.hpp  DirectedLight.hpp  Font.cpp  Font.hpp  Light.hpp  MaterialModelInstanceBatch.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelFactory.cpp  ModelFactory.hpp  ModelInstanceBatch.hpp  ModelInstanceManager.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelManager.hpp  Render.cpp  Render.hpp  RenderContext.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderModelInstanceManager.hpp  Skybox.cpp  Skybox.hpp  SpotLight.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  Viewport.cpp  Viewport.hpp
engine/src/Render3D/Domain/: InstancedMesh.cpp  InstancedMesh.hpp  InstancedModel.hpp  Material.hpp  Model.hpp  Skelet.hpp  SkinnedMesh.cpp  SkinnedMesh.hpp  SkinnedModel.hpp
engine/src/Render3D/GL/: GLMetaData.hpp  GLSLPreprocessor.cpp  GLSLPreprocessor.hpp
engine/src/Render3D/GfxObjects/: Framebuffer.cpp  Framebuffer.hpp  GfxImage.cpp  GfxImage.hpp  GfxObject.hpp  GfxUtils.cpp  GfxUtils.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
engine/src/Render3D/Mappers/: ModelMapper.cpp  ModelMapper.hpp  PrimitivesMapper.hpp  TerrainMapper.cpp  TerrainMapper.hpp
engine/src/Render3D/Models/: DirectedLight.hpp  InstancedMesh.cpp  InstancedMesh.hpp  InstancedModel.cpp  InstancedModel.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Mesh2D.hpp  Model.hpp  Model3D.cpp  Model3D.hpp  Particles.cpp  Particles.hpp  Skelet.hpp  SkinnedMesh.cpp  SkinnedMesh.hpp  SkinnedModel.cpp  SkinnedModel.hpp  Skybox.cpp  Skybox.hpp  SpotLight.hpp
engine/src/Render3D/Renderers/: BloomRenderer.cpp  BloomRenderer.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  DirectedLightRenderer.cpp  DirectedLightRenderer.hpp  FlareRenderer.cpp  FlareRenderer.hpp  FontRenderer.cpp  FontRenderer.hpp  GRenderer.cpp  GRenderer.hpp  MasterRenderer.cpp  MasterRenderer.hpp  ModelRenderer.cpp  ModelRenderer.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp  ParticlesRenderer.cpp  ParticlesRenderer.hpp  QuadRenderer.cpp  QuadRenderer.hpp  RenderSettings.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererState.hpp  SkyboxRenderer.cpp  SkyboxRenderer.hpp  SpotLightRenderer.cpp  SpotLightRenderer.hpp  Viewport.hpp  WaterRenderer.cpp  WaterRenderer.hpp
engine/src/Render3D/Utils/: TBN.hpp
engine/src/Render3D/shaders/: bloom-fragment-shader.glsl  bloom-vertex-shader.glsl  blur-fragment-shader.glsl  brightness-fragment-shader.glsl  brush-fragment-shader.glsl  cube-shadow-fragment-shader.glsl  cube-shadow-geometry-shader.glsl  cube-shadow-vertex-shader.glsl  deferred-fragment-shader.glsl  deferred-vertex-shader.glsl  depth-vertex-shader.glsl  direct-fragment-shader-pbr.glsl  direct-fragment-shader-spot-light-pbr.glsl  direct-fragment-shader-spot-light.glsl  direct-fragment-shader.glsl  direct-vertex-shader.glsl  exposure-fragment-shader.glsl  font-fragment-shader.glsl  font-vertex-shader.glsl  fragment-shader.glsl  g-buffer-fragment-shader.glsl  g-buffer-vertex-shader.glsl  grid-fragment-shader.glsl  grid-vertex-shader.glsl  hdr-fragment-shader.glsl  light-fragment-shader.glsl  light-vertex-shader.glsl  motion-blur-fragment-shader.glsl  overlay-fragment-shader.glsl  overlay-geometry-shader.glsl  overlay-vertex-shader.glsl  particles-fragment-shader.glsl  particles-vertex-shader.glsl  screen-fragment-shader.glsl  screen-vertex-shader.glsl  shadow-fragment-shader.glsl  shadow-vertex-shader.glsl  skybox-fragment-shader.glsl  skybox-vertex-shader.glsl  ssao-fragment-shader.glsl  (+6 more)
engine/src/Sound/: SoundBuffer.hpp  SoundMixer.cpp  SoundMixer.hpp
game/: TransformControlsCtrl copy.cpp  (+2 more)
(+257 files in other folders)
